second part of the commit

--- a/Python Webpage Styling/index.html
+++ b/Python Webpage Styling/index.html
@@ -120,33 +120,37 @@
       </div>
     </div>
     <p class="bottom-header-text">
-      Python is a programming language that lets you work quickly<br> and integrate systems more effectively . <span>&#62;&#62;&#62;</span><span>Learn more</span>
+      Python is a programming language that lets you work quickly<br> and integrate systems more effectively .
+      <span>&#62;&#62;&#62;</span><span>Learn more</span>
     </p>
   </header>
 
   <div class="row">
     <div class="small-card">
-      <h2><img src="./icons/shut-down.png" class="img-res"/> Get Started</h2>
+      <h2><img src="./icons/shut-down.png" class="img-res" /> Get Started</h2>
       <p>Python source code and installers<br>are available for download for all<br>versions!</p>
       <p class="c-l-blue"><a>Start with our Beginner's guide</a></p>
 
     </div>
 
     <div class="small-card">
-      <h2><img src="./icons/download.png" class="img-res"/> Download</h2>
-      <p>Whether you are new to<br> programming or an experienced<br> developer , its easy to learn and use<br> Python</p>
+      <h2><img src="./icons/download.png" class="img-res" /> Download</h2>
+      <p>Whether you are new to<br> programming or an experienced<br> developer , its easy to learn and use<br> Python
+      </p>
       <p class="c-l-blue">Latest:<a>Python 3.12.3</a></p>
     </div>
 
     <div class="small-card">
-      <h2><img src="./icons/docs.svg" class="img-res"/> Docs</h2>
-      <p>Documentation for Python's<br> standard library, along with tutorials<br> and guides, are available online .</p>
+      <h2><img src="./icons/docs.svg" class="img-res" /> Docs</h2>
+      <p>Documentation for Python's<br> standard library, along with tutorials<br> and guides, are available online .
+      </p>
       <p class="c-l-blue"><a>docs.python.org</a></p>
     </div>
 
     <div class="small-card">
-      <h2><img src="./icons/shut-down.png" class="img-res"/> Jobs</h2>
-      <p>Looking for work or have a Python<br> related position that you're trying to <br> hire for ? Our relaunched<br> community job board is the <br>place to go</p>
+      <h2><img src="./icons/shut-down.png" class="img-res" /> Jobs</h2>
+      <p>Looking for work or have a Python<br> related position that you're trying to <br> hire for ? Our relaunched<br>
+        community job board is the <br>place to go</p>
       <p class="c-l-blue"><a>jobs.python.org</a></p>
     </div>
   </div>
@@ -155,7 +159,7 @@
     <div class="widget-item">
       <div class="flex widget-title">
         <h2>
-          <img src="./icons/news-icon.png" class="img-res"/>
+          <img src="./icons/news-icon.png" class="img-res" />
           Latest News
         </h2>
         <p>
@@ -164,26 +168,26 @@
       </div>
 
       <ul>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>Python 3.13.0 beta released</a></p>
-       </li>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>PSF Grants Program 2022 & 2023 Transparency Report</a></p>
-       </li >
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>PSF Board Election Dates for 2024</a></p>
-       </li>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>PSF Board Election for 2024</a></p>
-       </li>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>The PSF's 2023 Annual Impact Report is here !</a></p>
-       </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>Python 3.13.0 beta released</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>PSF Grants Program 2022 & 2023 Transparency Report</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>PSF Board Election Dates for 2024</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>PSF Board Election for 2024</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>The PSF's 2023 Annual Impact Report is here !</a></p>
+        </li>
       </ul>
     </div>
 
@@ -191,7 +195,7 @@
     <div class="widget-item">
       <div class="flex widget-title">
         <h2>
-          <img src="./icons/events-icon.png" class="img-res"/>
+          <img src="./icons/events-icon.png" class="img-res" />
           Upcoming Events
         </h2>
         <p>
@@ -200,26 +204,26 @@
       </div>
 
       <ul>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>Python 3.13.0 beta released</a></p>
-       </li>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>PSF Grants Program 2022 & 2023 Transparency Report</a></p>
-       </li >
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>PSF Board Election Dates for 2024</a></p>
-       </li>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>PSF Board Election for 2024</a></p>
-       </li>
-       <li class="flex">
-        <time>2024-05-08</time>
-        <p><a>The PSF's 2023 Annual Impact Report is here !</a></p>
-       </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>Python 3.13.0 beta released</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>PSF Grants Program 2022 & 2023 Transparency Report</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>PSF Board Election Dates for 2024</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>PSF Board Election for 2024</a></p>
+        </li>
+        <li class="flex">
+          <time>2024-05-08</time>
+          <p><a>The PSF's 2023 Annual Impact Report is here !</a></p>
+        </li>
       </ul>
     </div>
   </div>
@@ -228,7 +232,7 @@
     <div class="medium-widget">
       <div class="flex widget-title">
         <h2>
-          <img src="./icons/events-icon.png" class="img-res"/>
+          <img src="./icons/events-icon.png" class="img-res" />
           Success Stories
         </h2>
         <p>
@@ -237,7 +241,8 @@
       </div>
       <div>
         <blockquote>
-          <a>When an Open Data standard is created and promoted,<br> it’s important to think why - what change is this trying to <br>drive? What will people do with this data that they<br> couldn’t do before?</a>
+          <a>When an Open Data standard is created and promoted,<br> it’s important to think why - what change is this
+            trying to <br>drive? What will people do with this data that they<br> couldn’t do before?</a>
         </blockquote>
 
         <p>
@@ -249,19 +254,124 @@
     <div class="medium-widget">
       <div class=" flex widget-title">
         <h2>
-          <img src="./icons/python-icon.png" class="img-res"/>
+          <img src="./icons/python-icon.png" class="img-res" />
           Use Python for...
         </h2>
         <p>
           More
         </p>
       </div>
+
+      <ul class="menu-row">
+        <li>
+          <b>Web Development:</b>
+          <span class="tag-wrapper">
+            <a class="tag">
+              Django
+            </a>
+            ,
+            <a class="tag">
+              Pyramid
+            </a>
+            ,
+            <a class="tag">Bottle</a>
+            ,
+            <a class="tag">Tornado</a>
+
+          </span>
+        </li>
+
+        <li>
+          <b>GUI Development:</b>
+          <span class="tag-wrapper">
+            <a class="tag">
+              Django
+            </a>
+            ,
+            <a class="tag">
+              Pyramid
+            </a>
+            ,
+            <a class="tag">Bottle</a>
+            ,
+            <a class="tag">Tornado</a>
+
+          </span>
+        </li>
+
+        <li>
+          <b>Scientific and Numeric:</b>
+          <span class="tag-wrapper">
+            <a class="tag">
+              Django
+            </a>
+            ,
+            <a class="tag">
+              Pyramid
+            </a>
+            ,
+            <a class="tag">Bottle</a>
+
+
+          </span>
+        </li>
+
+        <li>
+          <b>Software Development:</b>
+          <span class="tag-wrapper">
+            <a class="tag">
+              Django
+            </a>
+            ,
+            <a class="tag">
+              Pyramid
+            </a>
+            ,
+            <a class="tag">Bottle</a>
+            
+            
+          </span>
+        </li>
+
+        <li>
+          <b>System Administration:</b>
+          <span class="tag-wrapper">
+            <a class="tag">
+              Django
+            </a>
+            ,
+            <a class="tag">
+              Pyramid
+            </a>
+            ,
+            <a class="tag">Bottle</a>
+
+
+          </span>
+        </li>
+      </ul>
     </div>
- 
-
-    </div>
+  </div>
 
 
+  <div class="idk">
+    <h2>
+      <span>>>></span>
+      <a class="c-l-blue">Python enhancement proposals:</a>
+      The future of Python
+    </h2>
+
+    <a><img src="./icons/placeholder.png" class="img-res" /> RSS</a>
+  </div>
+
+<div class="idk-2">
+  <h2>>>>> Python Software Foundation</h2>
+  <p>The mission of the Python Software Foundation is to promote, protect, and advance the Python programming language, and to support and facilitate the growth of a diverse and international community of Python programmers. Learn more</p>
+  <div>
+    <button class="end-button">Become a member</button>
+    <button class="end-button">Donate to the PSF</button>
+  </div>
+</div>
 
 </body>
 
