--- a/Python Webpage Styling/index.html
+++ b/Python Webpage Styling/index.html
@@ -365,12 +365,15 @@
   </div>
 
 <div class="idk-2">
-  <h2>>>>> Python Software Foundation</h2>
-  <p>The mission of the Python Software Foundation is to promote, protect, and advance the Python programming language, and to support and facilitate the growth of a diverse and international community of Python programmers. Learn more</p>
   <div>
-    <button class="end-button">Become a member</button>
-    <button class="end-button">Donate to the PSF</button>
+    <h2 class="c-yellow">>>>> Python Software Foundation</h2>
+    <p>The mission of the Python Software Foundation is to promote, protect, and advance the Python programming language, and to support and facilitate the growth of a diverse and international community of Python programmers. Learn more</p>
+    <div>
+      <button class="end-button">Become a member</button>
+      <button class="end-button">Donate to the PSF</button>
+    </div>
   </div>
+<img src="./icons/download (1).png"/>
 </div>
 
 </body>
